--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 @import "./Scss/base/_colors";
 
 body {
-  // background-image: linear-gradient(to right, #606c88, #3f4c6b);
+  background-image: linear-gradient(to right, #606c88, #3f4c6b);
   // background-image: linear-gradient(to right, #3f4c6b, #b197fc);
-  background-image: url("./assests/manasha1.jpg");
+  // background-image: url("./assests/manasha1.jpg");
   height: 100%;
   width: 100%;
   background-size: cover;
