--- a/src/App.scss
+++ b/src/App.scss
@@ -62,7 +62,7 @@ body {
       font-style: italic;
     }
     .ant-btn {
-      background-color: #2d80b5;
+      background-color: #4fb8b6;
       color: white;
       border: none;
       font-size: 2rem;
