--- a/src/Scss/base/_colors.scss
+++ b/src/Scss/base/_colors.scss
@@ -1,6 +1,6 @@
 $text-color: #4A4A4A;
 $primary:#2D80B5;
-$secondary: hsl(181, 88%, 40%);
+$secondary: #0CBFC2;
 $white: #fff;
 $nav-color:#F1F5FA;
 $black:black;
